<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:menu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".connectWifi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/sw_music1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:showText="true"
                android:textOff="OFF"
                android:textOn="ON"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="请输入IP地址"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/et_port"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="请输入端口号"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="187dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="保存吗？"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_toLeftOf="@+id/isRemember"/>

            <CheckBox
                android:id="@+id/isRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/bt_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="连接"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.wificar.SatelliteMenu

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/satelliteMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        menu:radius="100dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/id_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/button2" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wifi11"
            android:tag="@string/text_btn1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wifi00"
            android:tag="@string/text_btn2" />

        <ImageView
            android:id="@+id/connectwifi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wifi11"
            android:tag="@string/text_btn3" />

        <ImageView
            android:id="@+id/disconnectwifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wifi00"
            android:tag="@string/text_btn4" />

        <ImageView
            android:id="@+id/contrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/contrl11"
            android:tag="@string/text_btn5" />

    </com.example.wificar.SatelliteMenu>
</RelativeLayout>


</FrameLayout>